# bootstrap

./: CMakeLists.txt  bootstrap.sh  docker-compose.yml
image/: Dockerfile
src/aplusb/: CMakeLists.txt  deep_thought.cpp  deep_thought.hpp  deep_thought_calculator.hpp  deep_thought_calculator_advanced.cpp  deep_thought_calculator_advanced.hpp  deep_thought_calculator_basic.cpp  deep_thought_calculator_basic.hpp  deep_thought_calculator_impl.hpp  tests.cpp
src/tests/: CMakeLists.txt
src/tests/aplusb/: CMakeLists.txt  deep_thought_test.cpp
